If we're in the middle of printing when window.close() is called, then defer closing the window until printing completes.  This avoids tearing down the presentation while the print engine is still using it.  Bug 172921, r=jkeiser, sr=dbaron.